Add functionality to take in urls for images.  Add random outfit generator

--- a/index.html
+++ b/index.html
@@ -7,10 +7,61 @@
     <title>Capsule Wardrobe Planner</title>
     <script src="app.js" defer></script>
     <link rel="stylesheet" href="app.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Cardo:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet"> 
 </head>
 <body>
     <div class="header">
         <h1>Capsule Wardrobe Planner</h1>
+    </div>
+    <div class="capsule-form">
+        <form action="">
+            <label for="top1">
+                Enter the url for your first top here:
+            </label>
+            <input type="text" id="top1">
+            <br>
+            <label for="top2">
+                Enter the url for your second top here:
+            </label>
+            <input type="text" id="top2">
+            <br>
+            <label for="top3">
+                Enter the url for your third top here:
+            </label>
+            <input type="text" id="top3">
+            <br>
+            <label for="top4">
+                Enter the url for your fourth top here:
+            </label>
+            <input type="text" id="top4">
+            <br>
+            <label for="bottom1">
+                Enter the url for your first bottom here:
+            </label>
+            <input type="text" id="bottom1">
+            <br>
+            <label for="bottom2">
+                Enter the url for your second bottom here:
+            </label>
+            <input type="text" id="bottom2">
+            <br>
+            <label for="bottom3">
+                Enter the url for your third bottom here:
+            </label>
+            <input type="text" id="bottom3">
+            <br>
+            <label for="bottom4">
+                Enter the url for your fourth bottom here:
+            </label>
+            <input type="text" id="bottom4">
+            <div class="buttons">
+                <button class="all-outfits">View all possible combinations</button>
+                <button class="random-outfit">See a random outfit</button>
+            </div>
+            
+        </form>
     </div>
     <div class="capsule-items">
     </div>
